# fabricpy

./: .gitignore  README.md  pyproject.toml
examples/: all_in_one.ipynb
src/fabric/: __init__.py  main.py  semantic_model.py  workspace.py
src/fabric/clients/: xmla.py
src/fabric/clients/rest/: __init__.py  base.py  fabric.py  powerbi.py
src/fabryc/: semantic_model.py
src/fabryc/clients/: xmla.py
