[tool.poetry]
name = "fabricpy"
version = "0.1.0"
description = ""
authors = ["Léo Grosjean <leo.grosjean@servier.com>"]
readme = "README.md"
packages = [{ include = "fabric", from = "src" }]


[tool.poetry.dependencies]
python = "<3.13,>=3.7"
pythonnet = "^3.0.3"
azure-identity = "^1.15.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
