[tool.poetry]
name = "fabryc"
version = "0.1.0"
description = ""
authors = ["Léo Grosjean <leo.grosjean@servier.com>"]
readme = "README.md"
packages = [{ include = "fabric", from = "src" }]


[tool.poetry.dependencies]
python = "<3.13,>=3.9"
pythonnet = "^3.0.3"
azure-identity = "^1.15.0"
requests = "^2.31.0"
pandas = "^2.2.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
